<resources>
    <string name="app_name">BookStore</string>
    <string name="title_home">Home</string>
    <string name="title_Cart">Cart</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="rent">Rent</string>
    <string name="back">Back</string>
    <string name="author">Author</string>
    <string name="_00_00">$00.00</string>
    <string name="description">Description..........................................</string>
    <string name="_0_0">0.0</string>
    <string name="book_title">Book Title</string>
    <string name="book_cover_image">Book Cover</string>
    <string name="bookCoverImageDescription">BookCoverImage</string>
    <string name="storeFrontLogo">StoreFrontLogo</string>
    <string name="cart">Cart</string>
    <string name="leftIcon">LeftIcon</string>
    <string name="proceed_to_checkout">Proceed to Checkout</string>
    <string name="cart_total">Total</string>
    <string name="cartDeleteItemItem">cartDeleteItemItem</string>
    <string name="cartItemTitle">CartItemTittle</string>
    <string name="cartIconImage">cartIconImage</string>
    <string name="cartItemAuthor">Author:</string>
    <string name="cartItemPrice">Price:</string>
    <string name="logout">logout</string>
    <string name="minus">-</string>
    <string name="add">+</string>
    <string name="send">Send</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_activity_slpash">SlpashActivity</string>
    <string name="SplashBtn">Splash</string>
    <string name="otp1" ><![CDATA[<font color="#a3a3a3">Enter OTP send to </font> <font color="#000000">+91-9876-564-656</font>]]></string>
    <string name="otp" ><![CDATA[<font color="#a3a3a3">We will send you an</font> <font color="#000000">One Time Password</font> <font color="#a3a3a3">on this mobile number</font>]]></string>
</resources>