<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:backgroundTint="#66F3EEED">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cartItemImageHolder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            android:background="@drawable/layout_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/cartItemImage"
                android:layout_width="wrap_content"
                android:layout_height="105dp"
                android:adjustViewBounds="true"

                android:contentDescription="@string/cartIconImage"
                app:layout_constraintVertical_bias="0.525" />
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/cartItemTitle"
            android:layout_width="205dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/cartItemTitle"
            android:textColor="#202020"
            android:textSize="17sp"
            app:layout_constraintStart_toEndOf="@+id/cartItemImageHolder"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/cartItemAuthor"
            android:fontFamily="@font/roboto_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:text="@string/cartItemAuthor"
            app:layout_constraintStart_toEndOf="@+id/cartItemImageHolder"
            app:layout_constraintTop_toBottomOf="@+id/cartItemTitle" />

        <TextView
            android:id="@+id/cartItemPrice"
            android:fontFamily="@font/roboto_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="16dp"
            android:text="@string/cartItemPrice"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cartItemImageHolder" />


        <ImageButton
            android:id="@+id/cartItemDelete"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:backgroundTint="#DC0000"
            android:contentDescription="@string/cartDeleteItemItem"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_baseline_delete_forever_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_baseline_delete_forever_24" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>